--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <!--==================== CSS ====================-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Responsive Portfolio Website</title>
+    <title>Portfolio Website</title>
 </head>
 
 <body>
     <!--==================== HEADER ====================-->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="" class="nav__logo">Martín</a>
+            <a href="#" class="nav__logo">Martín</a>
 
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list grid">
@@ -180,7 +180,7 @@
 
                             <div>
                                 <h1 class="skills__titles">Frontend Developer</h1>
-                                <span class="skills__subtitle">More than 4 years</span>
+                                <span class="skills__subtitle">More than 2 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -233,7 +233,7 @@
 
                             <div>
                                 <h1 class="skills__titles">Backend Developer</h1>
-                                <span class="skills__subtitle">More than 2 years</span>
+                                <span class="skills__subtitle">More than 1 years</span>
                             </div>
 
                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -484,8 +484,23 @@
 
         <!--==================== SERVICES ====================-->
         <section class="services section" id="services">
+            <h2 class="section__title">Services</h2>
+            <span class="section__subtitle">What I Offer</span>
 
+            <div class="services__container container grid">
+                <!--==================== SERVICES 1 ====================-->
+                <div class="services__content">
+                    <div>
+                        <i class="uil uil-web-grid services__icon"></i>
+                        <h3 class="services__title">Ux/Ui <br> Designer</h3>
+                    </div>
 
+                    <span class="button button--flex button--small button--link services__button">
+                        View More
+                        <i class="uil uil-arrow-right button__icon"></i>
+                    </span>
+                </div>
+            </div>
         </section>
 
         <!--==================== PORTFOLIO ====================-->
