--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="skills__container container grid">
                 <div>
                     <!--==================== SKILLS 1====================-->
-                    <div class="skills__content skills__open">
+                    <div class="skills__content skills__close">
                         <div class="skills__header">
                             <i class="uil uil-brackets-curly skills__icon"></i>
 
@@ -316,7 +316,7 @@
                             <div class="skills__data">
                                 <div class="skills__titles">
                                     <h3 class="skills__name">Photoshop</h3>
-                                    <span class="skills__number">85%</span>
+                                    <span class="skills__number">80%</span>
                                 </div>
                                 <div class="skills__bar">
                                     <span class="skills__percentage skills__photoshop"></span>
