--- a/index.html
+++ b/index.html
@@ -882,7 +882,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; Martín Pultrone. All rights reserved</p>
+            <p class="footer__copy">&#169; Martin Pultrone. All rights reserved</p>
         </div>
     </footer>
 
